--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@prisma/client": "6.7.0",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "22.15.14",
     "prisma": "6.7.0",
     "tsup": "8.4.0",
@@ -21,6 +22,7 @@
     "typescript": "5.8.3"
   },
   "dependencies": {
+    "bcryptjs": "3.0.2",
     "dotenv": "16.5.0",
     "fastify": "5.3.2",
     "zod": "3.24.4"
