--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +19,13 @@
     "@prisma/client": "6.7.0",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.15.14",
+    "@vitest/coverage-v8": "3.1.3",
     "prisma": "6.7.0",
     "tsup": "8.4.0",
     "tsx": "4.19.4",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.1.3"
   },
   "dependencies": {
     "bcryptjs": "3.0.2",
